styles/main.css
* {
  font-family: 'Arapey', serif; 
} 

body {
  background-color: #f2f2f2;
}

#head {
  position: relative;
  display: block;
  background-color: rgba(51,55,69,0.9);
  z-index: 3;
}

.header {
  position: relative;
  border-bottom: 1rem solid white;
  
}

.title {
  color:white;
  text-align: center;
  line-height: 1em;

}

#my-name {
  padding-top: 2rem;
  font-size: 6rem;
  font-weight: 300;
  letter-spacing: .9rem;
  margin-bottom: 0;
}

#subject {
  padding-bottom: 2rem;
  font-size: 3.5rem;
  font-weight: 200;
  letter-spacing: .7rem; 
}

#triangle-wrap {
  position: relative;
  overflow: visible;
  padding-bottom: 12rem;
}

/*#white {
  position: absolute;
  top:0 !important; 
  width: 0;
  height: 0;
  border-left: 20rem solid transparent;
  border-right: 20rem solid transparent;
  border-top: 20rem solid white;
  z-index: 2;
  pointer-events:none;
}*/

#rotated {
    position: relative;
    display: inline-block;
    height: 0; 
    width:100%;
    min-width: 1200px;
    color: white;
    background: white;
    padding-bottom:0;
    background-clip:content-box;
    overflow: visible;
}

#rotated:after {
    content: "";
    position: absolute;
    top:-20px; 
    left: 0;
    background-color:inherit;
    padding-bottom:50%; 
    width:57.7%;
    z-index: 2;
    -webkit-transform-origin:0 0;
    -ms-transform-origin:0 0;
    transform-origin:0 0;
    -webkit-transform: rotate(-30deg) skewX(30deg);;
    -ms-transform: rotate(-30deg) skewX(30deg);
    transform: rotate(-30deg) skewX(30deg);
}

/*@media makes triangle center in screen when screen width is less than 1200px*/ 

@media (max-width: 1200px){
  #rotated:after{
    left: calc(50vw - 600px);
  }
}


/*Start of nav bar*/

#navbar-list {
  text-decoration: none;
  background-color: rgba(51,55,69,0.4);
  border-top: 1px solid #bbb;
  border-bottom: 1px solid #bbb;
  margin-bottom: 0;
  position: relative;
  z-index: 1;

}

#navbar-list li {
  float: right;
  list-style-type: none;
}

#navbar-list li:first-of-type {
  float: left;
}

.nav-button a {
  display: inline-block;
  height: 38px;
  padding: 0.5rem 2rem;
  color: white;
  text-align: center;
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 38px;
  letter-spacing: .25rem;
  text-transform: uppercase;
  text-decoration: none;
  white-space: nowrap;
  cursor: pointer;
  box-sizing: border-box;
}

#navbar-list li a{
  width: 100%;
}

/*start of content area*/

.docs-section {
  background-color: rgba(255,255,255,0.5);

}

.pic-frame {
  margin-top: 6rem;
  width: 80%;
  padding-bottom: 40%;
  overflow: hidden;
  position: relative;
  margin-left: 10%;
}

.post-image {
  width: 100%;
  position: absolute;
}

.post-info {
  position: absolute;
  width: 80%;
  margin-top: 10rem;
  margin-left: 10%;
  text-align: center;
  color: white;
}

.post-info h3 {
  font-size: 4rem;
  font-weight: 500;
  letter-spacing: 1rem;
  margin-bottom: 0;
}

.post-info p {
  font-size: 2rem;
  font-weight: 300;
  letter-spacing: 0.4rem;
  margin-bottom: 0;
}

